--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,11 +1,16 @@
 {
-  "robotWidth": 0.762,
+  "robotWidth": 0.76,
   "robotLength": 0.762,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
-  "defaultMaxVel": 2.0,
-  "defaultMaxAccel": 2.0,
+  "pathFolders": [
+    "Amp Start",
+    "Test"
+  ],
+  "autoFolders": [
+    "Amp"
+  ],
+  "defaultMaxVel": 4.0,
+  "defaultMaxAccel": 6.0,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "maxModuleSpeed": 4.5
