Added paths, Auto commands, Red-side auto drive positions
Moved shooter calculations in to the subsystem rather than just being in the shooter control class.
Added 10 degree offset due to limelight now being angled.
Added named commands for autonomous.
Added correct positions for both alliances with the driveToPose bindings.
Updated path folders.
Created new center-start paths.
Added event marker/named commands to StartAmp1Leave autonomous.

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,13 +1,16 @@
 {
-  "robotWidth": 0.76,
-  "robotLength": 0.762,
+  "robotWidth": 0.77,
+  "robotLength": 0.77,
   "holonomicMode": true,
   "pathFolders": [
-    "Amp Start",
+    "Alliance Note",
+    "Leave",
+    "Start",
     "Test"
   ],
   "autoFolders": [
-    "Amp"
+    "Amp",
+    "Center"
   ],
   "defaultMaxVel": 4.0,
   "defaultMaxAccel": 6.0,
