--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -5,6 +5,7 @@
   "pathFolders": [
     "Alliance Note",
     "Leave",
+    "Center Line",
     "Start",
     "Test"
   ],
@@ -12,9 +13,9 @@
     "Amp",
     "Center"
   ],
-  "defaultMaxVel": 4.0,
-  "defaultMaxAccel": 6.0,
-  "defaultMaxAngVel": 540.0,
-  "defaultMaxAngAccel": 720.0,
-  "maxModuleSpeed": 4.5
+  "defaultMaxVel": 2.0,
+  "defaultMaxAccel": 2.0,
+  "defaultMaxAngVel": 360.0,
+  "defaultMaxAngAccel": 540.0,
+  "maxModuleSpeed": 3.0
 }
