Added More Autos
Now have several 3 notes as well as a 5 note

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -11,10 +11,12 @@
   ],
   "autoFolders": [
     "Amp",
-    "Center"
+    "Center",
+    "Away",
+    "Source"
   ],
-  "defaultMaxVel": 2.0,
-  "defaultMaxAccel": 2.0,
+  "defaultMaxVel": 4.5,
+  "defaultMaxAccel": 6.0,
   "defaultMaxAngVel": 360.0,
   "defaultMaxAngAccel": 540.0,
   "maxModuleSpeed": 3.0
